# horizons

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.devcontainer/: bootstrap.sh  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: build-and-push.yml  ci.yml  deploy-postgres.yml  deploy.yml  drift-check.yml  e2e.yml  infra-drift-check.yml  nightly.yml  test-oidc.yml  webapp.yml
data/: curated_set.yaml
data/samples/: README.md  ad-8936928-v1.md  ad-8936928-v1.meta.json  ae-26813422-v1.md  ae-26813422-v1.meta.json  al-31592917-v1.md  al-31592917-v1.meta.json  at-32061749-v1.md  at-32061749-v1.meta.json  au-2145602-v1.md  au-2145602-v1.meta.json  be-19194112-v1.md  be-19194112-v1.meta.json  br-32455517-v1.md  br-32455517-v1.meta.json  ch-20950489-v1.md  ch-20950489-v1.meta.json  cn-1353327-v1.md  cn-1353327-v1.meta.json  cy-31683899-v1.md  cy-31683899-v1.meta.json  cz-29662776-v1.md  cz-29662776-v1.meta.json  de-20951816-v1.md  de-20951816-v1.meta.json  dk-18087738-v1.md  dk-18087738-v1.meta.json  es-28885109-v1.md  es-28885109-v1.meta.json  eu-21435108-v1.md  eu-21435108-v1.meta.json  eu-28263756-v1.md  eu-28263756-v1.meta.json  eu-28943439-v1.md  eu-28943439-v1.meta.json  eu-31366184-v1.md  eu-31366184-v1.meta.json  eu-31915825-v1.md  eu-31915825-v1.meta.json  eu-34656519-v1.md  (+52 more)
data/samples/synthetic_v2/: README.md  au-2145602-v2.md  de-20951816-v2.md  eu-31366184-v2.md  expected_events.yaml  fr-31702142-v2.md  gb-28914588-v2.md  ie-27732019-v2.md  ie-8064194-v2.md  it-26863-v2.md
docs/: 0. about-these-docs.md  1. product-questions.md  2. clause-alignment.md  2. database-design.md  3. clause-alignment.md  3. database-design.md  4. services.md  5. clause-tree-parser.md  RFC-1 product-questions.md  RFC-2 clause-alignment.md  RFC-3 database-design.md  RFC-4 services.md  RFC-6 platform-databricks-vs-aca-postgres.docx  RFC-6 platform-databricks-vs-aca-postgres.md  lawstronauts-api-overview.md  pipeline-overview.md  product-questions.md  seeding.md
docs/adrs/: 0001-worker-shape.md  README.md
docs/api/: README.md  auth.md  concepts.md  endpoints.md  getting-started.md  horizons-primitives.md  lawstronaut-endpoints.md  operational-notes.md
docs/plan/: evaluation-report.md  improvement-plan.md
docs/plan/discussions/: 01-architecture-and-gaps.md  02-multi-tenant-isolation.md  03-backend-stack.md  05-frontend.md  (+1 more)
docs/runbooks/: alignment-calibration.md  demo-accounts.md  demo.md  deploy.md  local-dev.md  migrations.md  reseed.md  seeding.md
infra/: README.md  main.bicep  main.parameters.example.json  postgres.bicep  postgres.parameters.example.json
infra/modules/: alerts.bicep  application-insights.bicep  container-app-api.bicep  container-app-env.bicep  container-app-worker.bicep  front-door.bicep  keyvault.bicep  migration-job.bicep  network.bicep  postgres-flex.bicep  reseed-corpus-job.bicep  seed-demo-accounts-job.bicep  storage.bicep
journal/: 260604-initial-design-and-fixtures.md  260605-fix-worker-staged-guard-and-env-validation.md  260605-secfix-pattern-retrospective.md  260605-wu04-ci-skeleton-wu05-readme-license.md  260605-wu06-lint-check-wu10-pg-roles.md  260605-wu11-tenancy-tables.md  260605-wu12-corpus-tables.md  260605-wu13-current-scope.md  260605-wu14-rls-spine.md  260605-wu15-session-bracket.md  260605-wu16-and-wu17-repos-and-isolation-gate.md  260605-wu18-hypothesis-property-isolation-nightly.md  260605-wu19-admin-operator-and-impersonation.md  260605-wu20-clause-tree-parser.md  260605-wu21-portal-configs.md  260605-wu22-similarity-stack.md  260605-wu23-alignment-pipeline.md  260605-wu24-alignment-regression-suite.md  260605-wu30-worker-shape-spike.md  260605-wu31-ingestion-tables-schema.md  260605-wu32-lawstronaut-client.md  260605-wu33-claim-loop.md  260605-wu34-poll-transaction.md  260605-wu35-curated-set-seed.md  260605-wu40-auth-seam.md  260605-wu41-fastapi-shell.md  260605-wu41-fix-token-kind-gate.md  260605-wu42-auth-endpoints.md  260605-wu42-securityfix-auth-hardening.md  260605-wu43-me-and-watchlists.md  260605-wu44-three-primitives.md  260605-wu45-admin-subscriptions.md  260605-wu45-secfix-scope-symmetry.md  260605-wu46-openapi-endpoints.md  260605-wu50-vue-shell-and-auth-store.md  260605-wu51-runtime-config.md  260605-wu52-watchlists-view.md  260605-wu53-change-diff-view.md  260605-wu55-large-doc-rendering-safety.md  260605-wu56-webapp-ci-build-artifact.md  (+41 more)
scripts/: explore_uk_eu_portals.py  fetch_fixtures.py  fetch_nl_gdpr.py  fetch_uk_eu_fillers.py  reseed_aca.sh  reseed_corpus.py  seed_curated_set.py
spikes/wu30/: README.md  __init__.py  aca_job.py  asyncio_loop.py  fake_schedule.py
tests/: README.md  conftest.py  test_admin_subscription_endpoints.py  test_auth_endpoints.py  test_change_events_migration.py  test_corpus_tables_migration.py  test_create_demo_accounts.py  test_current_scope_migration.py  test_documents_endpoints.py  test_ingestion_tables_migration.py  test_local_jwt_refresh_flow.py  test_me_and_watchlists_endpoints.py  test_no_direct_corpus_access.py  test_postgres_smoke.py  test_primitives_endpoints.py  test_raw_sql_isolation.py  test_refresh_tokens_migration.py  test_repos_change_events.py  test_repos_corpus.py  test_repos_watchlists.py  test_rls_corpus.py  test_rls_watchlists.py  test_role_model_migration.py  test_session_bracket.py  test_session_helpers.py  test_tenancy_tables_migration.py  test_watchlists_migration.py  test_workspace_imports.py
tests/alignment/: _mutations.py  conftest.py  test_fixtures.py  test_synthetic_v2.py
tests/api/: conftest.py  test_admin_access_log_append_only.py  test_admin_audit_endpoint.py  test_admin_clients_endpoint.py  test_admin_health_endpoints.py  test_admin_impersonate_endpoint.py
tests/integration/: conftest.py  test_blob_sweep.py  test_claim_loop.py  test_poll_document.py  test_seed_curated_set.py  test_synthetic_v2_staging.py
tests/isolation/: conftest.py  test_admin_paths.py  test_corpus_subscription_isolation.py  test_private_state_isolation.py  test_property_isolation.py
(+10 files in other folders)
