[project]
name = "horizons-workspace"
version = "0.0.0"
description = "Workspace root for the Horizons regulatory-change intelligence service."
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/horizons-core",
    "packages/horizons-ingestion",
    "packages/horizons-api",
]

[tool.uv.sources]
horizons-core = { workspace = true }
horizons-ingestion = { workspace = true }
horizons-api = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "hypothesis>=6.112",
    "pre-commit>=4.0",
    "psycopg[binary]>=3.2",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pyright>=1.1.380",
    "ruff>=0.9",
    "sqlalchemy[asyncio]>=2.0",
    "testcontainers[postgres]>=4.7",
    "horizons-core",
    "horizons-ingestion",
    "horizons-api",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".claude", "packages/horizons-webapp", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TC"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy 2.x mapped_column resolves ``Mapped[T]`` annotations at
# runtime via module globals, so type-only imports there must NOT live
# in a TYPE_CHECKING block — TC003 would break the mapper.
# Pydantic v2 (used by repository DTOs in horizons_core.repos) resolves
# annotations via ``get_type_hints()`` at model-build time and needs
# the same runtime-import discipline.
"packages/horizons-core/src/horizons_core/repos/*.py" = ["TC003"]
"packages/horizons-core/src/horizons_core/db/models/*.py" = ["TC003"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
# Many of our deps (testcontainers, asyncpg, datasketch, markdown-it-py …)
# don't ship PEP-561 stubs. Strict mode still catches real bugs in our
# code; demoting this one rule keeps the third-party noise out without
# blanket-disabling type checks.
reportMissingTypeStubs = "warning"
include = [
    "packages/horizons-core/src",
    "packages/horizons-ingestion/src",
    "packages/horizons-api/src",
    "tests",
]
exclude = ["**/__pycache__", ".claude", "packages/horizons-webapp"]

[tool.pytest.ini_options]
# `importlib` import mode lets per-package tests share `test_smoke.py`
# filenames without colliding (rootdir test-collection conflates same-named
# modules otherwise).
addopts = "-ra --strict-markers --strict-config --import-mode=importlib -m 'not nightly'"
testpaths = [
    "packages/horizons-core/tests",
    "packages/horizons-ingestion/tests",
    "packages/horizons-api/tests",
    "tests",
]
asyncio_mode = "auto"
markers = [
    "integration: tests that require Docker (testcontainers PG, etc.) — auto-skipped if Docker isn't reachable",
    "nightly: slow Hypothesis / property tests; default-excluded by addopts and run by the nightly GitHub Actions workflow only",
]

[tool.coverage.run]
branch = true
source = [
    "packages/horizons-core/src",
    "packages/horizons-ingestion/src",
    "packages/horizons-api/src",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
